original-manifests/game-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-fargate-app
  labels:
    app.kubernetes.io/name: sample-game-app
