original-manifests/game-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ns-fargate-app
  name: sample-game-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-game-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-game-app
    spec:
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        imagePullPolicy: Always
        name: sample-game-app
        ports:
        - containerPort: 80
