original-manifests/game-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ns-fargate-app
  name: game-app-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: sample-game-app
